tests/passing/with_never.ml.opts
-c with=0,with_never=true
