tests/failing/obuild.ml.opts
-c base=4,type=2,match_clause=4
